--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    padding: 8px 50px;
+    padding: 8px 160px;
     flex: auto;
 }
 
@@ -18,11 +18,12 @@ body {
     flex: 1;
     justify-content: space-between;
     align-items: center;
+
 }
 
-.header,.footer{
+.header,
+.footer {
     max-height: 50px;
-    color: #E5E7EB;
 }
 
 .header .links {
@@ -30,20 +31,60 @@ body {
     justify-content: space-between;
     list-style: none;
     gap: 20px;
-
-
 }
 
 .link a {
     text-decoration: none;
     color: #E5E7EB;
+    font-size: 18px;
 }
 
 
 .logo {
- font-size: 24px;
- font-weight: 800;
+    font-size: 24px;
+    font-weight: 700;
+    color: white;
+}
 
+.footer {
+    color: #E5E7EB;
+}
+
+.content-head {
+    color: #E5E7EB;
+    display: flex;
+    padding-top: 50px;
+    gap:30px;
+}
+
+.head-box h2 {
+    font-weight: 900;
+    font-size: 48px;
+    margin: 0;
+}
+
+.head-box .subtext {
+    font-size: 18px;
+    padding-bottom: 8px;
+}
+
+button {
+    background-color: #3882f6;
+    padding: 8px 20px;
+    border-radius: 8px;
+    color: white;
+    font-weight: 700;
+    border: none;
+}
+
+.placeholder {
+    background-color: #6d747d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 200px;
+    flex-shrink: 0;
 }
 
 .content-info {
